# SEM5-PW-EXECUTOR

./: CMakeLists.txt  Executor.cpp  Executor.h  Program.cpp  Program.h  README.md  Synchronizer.cpp  Synchronizer.h  Task.cpp  Task.h  err.c  err.h  executor.c  executor.cpp  executor.h  mutex.h  synchronizer.c  synchronizer.h  task.c  task.h  testing.c  testing.cpp  testing2.cpp  utils.c  utils.h
